--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,9 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Home</h1>
+    
+    <center>
+    <h1>Home</h1><img src="robot_logo.jpg" alt="" width="1000px" height="600px">
     
     {{> footer}}
-
+    </center>
 </body>
 </html>
